Avoid instantiating Byte objects; call Byte.valueOf() instead.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1403383 13f79535-47bb-0310-9956-ffa450edef68